--- a/css/main3.css
+++ b/css/main3.css
@@ -37,7 +37,6 @@
 	/*(4/12)x100*/
 	width: 33.333%;
 	border: 5px solid #BCB5A9;
-	background: #4485B3;
 }
 .col-5{
 	/*(5/12)x100*/
@@ -54,6 +53,7 @@
 .col-8{
 	/*(8/12)x100*/
 	width: 66.6667%;
+	border: 5px solid #BCB5A9;
 }
 .col-9{
 	/*(9/12)x100*/
@@ -68,16 +68,19 @@
 }.col-12{
 	/*(12/12)x100*/
 	width: 100%;	
-	background: #A90BA9;
-	border: 5px solid #BCB5A9;
 }
 .height-1{
 	height: 66vh;
+	background: #4485B3;
 }
 .height-2{
 	height: 33vh;
+	background: #A90BA9;
 }
-
+.height-2:nth-child(3),.height-2:nth-child(6),.height-2:nth-child(7){
+	float: right;
+	background: #4485B3;
+}
 .height-3{
 	height: 99vh;
 }
