--- a/css/main8.css
+++ b/css/main8.css
@@ -38,6 +38,10 @@
 	width: 33.333%;
 	border: 5px solid #BCB5A9;
 	background: #4485B3;
+	float: right;
+}
+div:nth-child(2){
+	margin-top: 33vh;	
 }
 .col-5{
 	/*(5/12)x100*/
@@ -54,6 +58,9 @@
 .col-8{
 	/*(8/12)x100*/
 	width: 66.6667%;
+	margin-top: 33vh;
+	border: 5px solid #BCB5A9;
+	background: #A90BA9;
 }
 .col-9{
 	/*(9/12)x100*/
@@ -68,8 +75,6 @@
 }.col-12{
 	/*(12/12)x100*/
 	width: 100%;	
-	background: #A90BA9;
-	border: 5px solid #BCB5A9;
 }
 .height-1{
 	height: 66vh;
