--- a/css/main8.css
+++ b/css/main8.css
@@ -82,7 +82,12 @@ div:nth-child(2){
 .height-2{
 	height: 33vh;
 }
-
 .height-3{
 	height: 99vh;
+}
+.menu{
+	background: #F83434;
+	position: absolute;
+	right: 250px;
+	bottom: 10px;
 }
