--- a/css/main9.css
+++ b/css/main9.css
@@ -20,7 +20,6 @@
 	min-height: 7px;
 	padding: 12px;
 	float: left;
-
 }
 .col-1{
 	/*(1/12)x100*/
@@ -84,7 +83,12 @@ div:nth-child(2){
 .height-2{
 	height: 33vh;
 }
-
 .height-3{
 	height: 99vh;
+}
+.menu{
+	background: #F83434;
+	position: absolute;
+	right: 250px;
+	bottom: 10px;
 }
